--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: lint_and_test
+    needs: test
     if: github.ref_type == 'tag'
 
     steps:
