--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build and test with devcontainer
+      - name: Publish with devcontainer
         uses: devcontainers/ci@v0.3
         with:
           runCmd: |
