--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "lioness"
+name = "pytube-lioness"
 version = "0.0.0"
 description = "Downloads youtube video and audio streams of a URL before combing them into a single file"
 authors = ["Yifei Yu"]
