--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,7 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           runCmd: |
+            echo ${GITHUB_REF/refs\/tags\//}
             tag=${GITHUB_REF/refs\/tags\//}
             poetry version $tag
             poetry install
